tests/NormalTests/paczka1/fuzzy1/45343884.err
Error in line 12: hMT S742 87,1
Error in line 17: hMT A651 80,2
Error in line 18: hMT A92 81,9
Error in line 2: q6t7cKyQRDV A92 79,4
Error in line 25: 8yutaX S742 34,7
Error in line 27: 8yutaX A651 95,9
Error in line 16: NRz0 A651 30,9
Error in line 30: NRz0 A92 43,9
Error in line 31: q6t7cKyQRDV S742 49,5
Error in line 32: NRz0 A651 83,5
Error in line 36: q6t7cKyQRDV S643 7,3
